--- a/style.css
+++ b/style.css
@@ -300,6 +300,13 @@ input::placeholder{
 .visible{
     display: none;
 }
+footer{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        align-items: center;
+        font-size: 1rem;
+}
 @media(min-width: 471px){
     .add_mobile{
         display: none;
